--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -3,6 +3,9 @@
   "name": "waitlist-template",
   "main": "src/worker.ts",
   "compatibility_date": "2026-02-25",
+  "build": {
+    "command": "npx astro build"
+  },
   "assets": {
     "directory": "./dist",
     "binding": "ASSETS"
